# Xiuxian

./: Cargo.toml  README.md  config.json  result.txt
src/: battle.rs  benchmark.rs  config.rs  cultivation.rs  level.rs  life.rs  main.rs  spawn.rs  stat.rs  system.rs
src/emulation/: player.rs
