[package]
name = "xiuxian"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
rand_core = "0.9"
bevy_rand = "0.11.3"
bevy_prng = { version = "0.11.3", features = ["rand_chacha", "wyrand"] }
getrandom = { version="0.3", features = ["wasm_js"] }
itertools = "0.14.0"
rand = "0.9.2"
bevy_diagnostic = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
lazy_static = "1.5.0"
tempfile = "3.10.1"

[profile.release]
debug = "line-tables-only"